# LearnMOF-Web

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  crystal_image_detection.ipynb  crystal_image_detection.py  docker-compose.yml  learnmof_web_conda.yml  requirements.txt
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  generate_thumbnails.py  pyproject.toml  run.py
backend/main/: __init__.py  enums.py
backend/main/commons/: decorators.py  exceptions.py
backend/main/controllers/: __init__.py  probe.py  upload.py
backend/main/engines/: inference.py  upload.py
backend/main/libs/: utils.py
backend/main/schemas/: base.py  browse.py  inference.py
backend/main/templates/: index.html  result_db.html
backend/tests/: conftest.py
frontend/: Dockerfile  dockerignore  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js  setupProxy.js
frontend/src/components/Header/: Header.css  index.js
frontend/src/components/Layout/: index.js
frontend/src/components/Layout/MainLayout/: index.js
frontend/src/components/Layout/MainLayout/Browse/: index.js
frontend/src/components/Layout/MainLayout/FilterBar/: index.js
frontend/src/components/Layout/MainLayout/Home/: index.js
frontend/src/components/Layout/MainLayout/ImageDetail/: index.js
frontend/src/components/Layout/MainLayout/Upload/: index.js
templates/: base.html  database.html  index.html  result.html  result_db.html  result_upload.html
