[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
pandas = "^2.0.2"
pillow = "^9.5.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
pymongo = "^4.3.3"
plotly = "^5.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
